--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "main": "./index.mjs",
   "scripts": {
-    "build": "ls node_modules/client/* && cp node_modules/client/server/assets/ai.mjs ./index.mjs",
-    "test": "node index.mjs"
+    "build": "ls node_modules/client/* && cp node_modules/client/server/assets/ai.mjs ./index.mjs && node ./index.mjs",
+    "test": "echo true"
   },
   "license": "MIT",
   "repository": {
